welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
	var m= ecritMessage();
               ^